Fix some docs specific dark mode styles

--- a/site/assets/scss/_sidebar.scss
+++ b/site/assets/scss/_sidebar.scss
@@ -53,7 +53,7 @@
   &:hover,
   &:focus,
   &.active {
-    color: var(--bs-heading-color);
+    color: var(--bs-emphasis-color);
     text-decoration: if($link-hover-decoration == underline, none, null);
     background-color: var(--bd-sidebar-link-bg);
   }
